--- a/start-page.html
+++ b/start-page.html
@@ -22,8 +22,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <div class="jumbotron">
-                    <h1 class="display-4">Hello, world!</h1>
+                <div class="jumbotron text-center">
+                    <h1 class="display-4">Cronus</h1>
                     <button type="button" class="btn btn-primary login-modal-button" data-toggle="modal" data-target="#loginModal">
                         Login
                     </button>
@@ -52,10 +52,12 @@
                         <div class="form-group">
                             <label for="email-input" class="col-form-label">Email</label>
                             <input type="email" class="form-control" id="email-input">
+                            <span class="errorEmail"></span>
                         </div>
                         <div class="form-group">
                             <label for="password-input" class="col-form-label">Password</label>
                             <input type="password" class="form-control" id="password-input">
+                            <span class="errorPassword"></span>
                         </div>
                     </form>
                 </div>
@@ -78,21 +80,15 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <!-- <div class="form-group">
-                            <label for="first-name-input" class="col-form-label">First Name</label>
-                            <input type="text" class="form-control" id="first-name-input">
-                        </div>
-                        <div class="form-group">
-                            <label for="last-name-input" class="col-form-label">Last Name</label>
-                            <input type="text" class="form-control" id="last-name-input">
-                        </div> -->
                         <div class="form-group">
                             <label for="signup-email-input" class="col-form-label">Email</label>
                             <input type="email" class="form-control" id="signup-email-input">
+                            <span class="errorEmail"></span>
                         </div>
                         <div class="form-group">
                             <label for="signup-password-input" class="col-form-label">Password</label>
                             <input type="password" class="form-control" id="signup-password-input">
+                            <span class="errorPassword"></span>
                         </div>
                     </form>
                 </div>
