--- a/start-page.html
+++ b/start-page.html
@@ -52,13 +52,12 @@
                         <div class="form-group">
                             <label for="email-input" class="col-form-label">Email</label>
                             <input type="email" class="form-control" id="email-input">
-                            <span class="errorEmail"></span>
                         </div>
                         <div class="form-group">
                             <label for="password-input" class="col-form-label">Password</label>
                             <input type="password" class="form-control" id="password-input">
-                            <span class="errorPassword"></span>
                         </div>
+                        <span class="error text-danger"></span>
                     </form>
                 </div>
                 <div class="modal-footer">
