--- a/start-page.html
+++ b/start-page.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
@@ -16,6 +16,7 @@
         crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
     <script src="login.js"></script>
+    <script src="flight.js"></script>
 </head>
 
 <body>
@@ -97,6 +98,27 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <label for="destination">Destination</label>
+                <input type="text" class="form-control" id=destination list="cityList">
+                <datalist id="cityList"></datalist>
+            </div>
+            <div class="col-sm-3">
+                <label for="toDate">Departing</label>
+                <input type="date" class="form-control" id="toDate">
+            </div>
+            <div class="col-sm-3">
+                <label for="fromDate">Arriving</label>
+                <input type="date" class="form-control" id="fromDate">
+            </div>
+            <div class="col-sm-3">
+                <button type="button" class="btn btn-primary search">Search</button>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
