--- a/start-page.html
+++ b/start-page.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
     <script src="login.js"></script>
     <script src="flight.js"></script>
+    <script src="weather.js"></script>
 </head>
 
 <body>
@@ -147,6 +148,58 @@
                     <tbody class="flightTableBody">
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <button type="button" id="getWeather" class="btn btn-primary" data-toggle="modal" data-target="#weatherModal">Get
+                    Weather</button>
+                <button type="button" id="calendar" class="btn btn-primary" data-toggle="modal" data-target="#calendarModal">Calendar</button>
+            </div>
+        </div>
+    </div>
+    <!-- Weather Modal -->
+    <div class="modal fade" id="weatherModal" tabindex="-1" role="dialog" aria-labelledby="weatherModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="weatherModalLabel">Weather</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- <form>
+                        <div class="form-group">
+                            <label for="signup-email-input" class="col-form-label">Email</label>
+                            <input type="email" class="form-control" id="signup-email-input">
+                        </div>
+                        <div class="form-group">
+                            <label for="signup-password-input" class="col-form-label">Password</label>
+                            <input type="password" class="form-control" id="signup-password-input">
+                        </div>
+                        <span class="error text-danger"></span>
+                    </form> -->
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Date</th>
+                                <th scope="col">Max Temp.</th>
+                                <th scope="col">Min Temp.</th>
+                                <th scope="col">Humidity</th>
+                                <th scope="col">Weather Condition</th>
+                            </tr>
+                        </thead>
+                        <tbody class="weatherTableBody">
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
