--- a/start-page.html
+++ b/start-page.html
@@ -166,7 +166,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="weatherModalLabel">Weather</h5>
+                    <h5 class="modal-title" id="weatherModalLabel"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -186,7 +186,6 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th scope="col">Date</th>
                                 <th scope="col">Max Temp.</th>
                                 <th scope="col">Min Temp.</th>
                                 <th scope="col">Humidity</th>
