--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="login.js"></script>
     <script src="flight.js"></script>
     <script src="weather.js"></script>
-    <script src="calendar.js"></script>
+</head>
 
 <body>
     <div class="container">
@@ -191,38 +191,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Calendar Modal -->
-        <div class="modal fade" id="calendarModal" tabindex="-1" role="dialog" aria-labelledby="calendarModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="calendarModalLabel"></h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Max Temp.</th>
-                                        <th scope="col">Min Temp.</th>
-                                        <th scope="col">Humidity</th>
-                                        <th scope="col">Weather Condition</th>
-                                    </tr>
-                                </thead>
-                                <tbody class="weatherTableBody">
-                                </tbody>
-                            </table> -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
     </div>
 </body>
 
