--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="col-sm-12">
                 <button type="button" id="getWeather" class="btn btn-primary" data-toggle="modal" data-target="#weatherModal">Get
                     Weather</button>
-                <button type="button" id="calendar" class="btn btn-primary" data-toggle="modal" data-target="#calendarModal">Calendar</button>
+                <button type="button" id="calendar" class="btn btn-primary" data-toggle="modal" data-target="#calendarModal" onclick="window.open('indexfullcal.html', '_blank')" target >Calendar</button>
             </div>
         </div>
     </div>
