--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                             <th scope="col">Route</th>
                             <th scope="col">Duration</th>
                             <th scope="col">Price</th>
+                            <th scope="col">Booking Link</th>
                         </tr>
                     </thead>
                     <tbody class="flightTableBody">
